fix(a11y): removing restriction for banner/app alerts to be one line
• removed height restrictions forcing banner alerts to be one line
• removed truncation on banner alerts from CSS
• it is recommended that apps NOT wrap the content inside a banner alert but sometimes that is not realistic
• given the current implementation of banner alerts it is recommended that paging through multiple alerts uses either opacity or visibility instead of display: none CSS styles so that content jumping can be avoided.

--- a/packages/core/src/alert/alert.element.scss
+++ b/packages/core/src/alert/alert.element.scss
@@ -117,16 +117,7 @@ cds-internal-close-button {
 
 :host([type='banner']) .alert-content-wrapper {
   transform: none;
-  overflow: hidden;
-  height: #{$cds-token-space-size-10};
-}
-
-:host([type='banner']) {
-  .alert-content {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
+  min-height: #{$cds-token-space-size-10};
 }
 
 :host([type='banner']) .spinner {
